[gd_scene load_steps=10 format=2]

[ext_resource path="res://props/block_explosive.png" type="Texture" id=1]
[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://props/block_explosive.gd" type="Script" id=3]
[ext_resource path="res://pieces/anything_detector.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 32 )

[node name="block_explosive" type="StaticBody2D"]
z_index = 21
script = ExtResource( 3 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="blast_player" parent="." instance=ExtResource( 2 )]

[node name="hitbox" type="CollisionShape2D" parent="blast_player"]
visible = false
shape = SubResource( 2 )

[node name="blast_enemy" parent="." instance=ExtResource( 2 )]
target_teams = [ 1 ]

[node name="hitbox" type="CollisionShape2D" parent="blast_enemy"]
visible = false
shape = SubResource( 3 )

[node name="anything_detector" parent="." instance=ExtResource( 4 )]
target_groups = [ "explodables" ]

[node name="hitbox0" type="CollisionShape2D" parent="anything_detector"]
visible = false
shape = SubResource( 4 )

[node name="hitbox1" type="CollisionShape2D" parent="anything_detector"]
visible = false
shape = SubResource( 5 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="destroyer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="destroyer" to="." method="_on_destroyer_timeout"]
